  or globally by adding that to the .default. host.
* Add protocols.cfg entries for amqp(s), svn, ircd, and mail (submission).
  (Note that smtp testing here may suffer the same occasional issue as 
  regular smtp conversations with regard to out-of-order commands.)
* Fix a crash on non-glibc systems when testing xymond_alert configs with
  a host not in hosts.cfg (Reported by John Thurston)


Changes from 4.3.18 -> 4.3.19 (30 Mar 2015)
===========================================

* rev 7619

* Don't crash when receiving an AAAA DNS response (BSD, thanks Mark Felder)
* xymonclient.sh running in --local mode was generating reports that were
  marked as duplicates (and thus being ignored). Reported by Guillaume Chane.
* Building with old versions of libpcre not supporting PCRE_FIRSTLINE should
  once again work
* Memory reporting on FreeBSD and OpenBSD has been fixed (Mark Felder)
* The process list visible in the 'procs' test of Linux and FreeBSD clients
  is now generated in ASCII "forest" mode for increased legibility.
* clientlog, hostinfo, and modify messages are now tracked in xymond stats
* In environment config files (xymonserver.cfg, xymonclient.cfg, and cfgoptions.cfg)
  an initial "export " line (as if it were actually a shell script) will be
  ignored and the remainder of the line parsed as normal.
* headermatch will now match the headers of an HTTP response even if the body
  is empty (eg, matching for a 302 Redirect)
* --debug mode in most daemons should cause *much* less of a performance hit, and
  output will be timestamped in microseconds
* xymondboard can now be used to PCRE-match against the raw message, and 
  acknowledgement and disable comments. Inequalities can be specified against the 
  lastchange, logtime, validtime, acktime, disabletime fields (in epoch timestamps).
  The existing net= and tag= filters have been documented.
* The sample xymon.conf apache snippet now supports apache 2.4 syntax