@@ -43,6 +43,9 @@ Changes from 4.3.19 -> 4.xx.yy (00 May 2015)
   regular smtp conversations with regard to out-of-order commands.)
 * Fix a crash on non-glibc systems when testing xymond_alert configs with
   a host not in hosts.cfg (Reported by John Thurston)
+* On newer Linux kernels with recent procps-ng, use the "Available" memory
+  reported by the kernel to give a more accurate reading for "Actual Used"
+  in the client's memory status. (Reported by Dominique Frise)
 
 
 Changes from 4.3.18 -> 4.3.19 (30 Mar 2015)
